@@ -64,3 +64,4 @@
 ( cvs diff -u -r 1.1.2.49 -r 1.1.2.50 src/poppler_viewer.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/poppler_viewer.h;  ) > 0.2.0cvs58.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/poppler_viewer.h;  cvs diff -u -r 1.1.2.50 -r 1.1.2.51 src/poppler_viewer.c;  ) > 0.2.0cvs59.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/Makefile.am;  ) > 0.2.0cvs60.patchset
+( cvs diff -u -r 1.1.2.51 -r 1.1.2.52 src/poppler_viewer.c;  ) > 0.2.0cvs61.patchset
