@@ -1,3 +1,8 @@
+2007-03-26 [iwkse]	0.2.0cvs61
+
+	* src/poppler_viewer.c
+			*fixed double update call
+
 2007-03-25 [colin]	0.2.0cvs60
 
 	* src/Makefile.am
